--- a/style.css
+++ b/style.css
@@ -59,3 +59,25 @@ h1 {
 #inputField #addBtn span:last-child {
   transform: translate(-50%, -50%) rotate(-90deg);
 }
+
+#todoList {
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  text-align: left;
+}
+
+#todoList li {
+  padding: 10px 0;
+  user-select: none;
+}
+
+#todoList button {
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  margin-right: 8px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
